#917: Fixing tests.
Signed-off-by: Franz Wilhelmstötter <franz.wilhelmstoetter@gmail.com>