@@ -106,18 +106,6 @@ allprojects {
 		resolutionStrategy.preferProjectModules()
 	}
 
-	tasks.withType<JavaCompile>().configureEach {
-		options.compilerArgs.add("--enable-preview")
-	}
-
-	tasks.withType<Test>().configureEach {
-		jvmArgs("--enable-preview")
-	}
-
-	tasks.withType<JavaExec>().configureEach {
-		jvmArgs("--enable-preview")
-	}
-
 }
 
 subprojects {
